# mbajkML

./: .gitignore  Dockerfile  README.md  docker-compose.yml  dvc.yaml  netlify.toml  pyproject.toml  requirements.txt  test_configurations.py
.dvc/: config
data/: processed.dvc  raw.dvc
great_expectations/: great_expectations.yml
models/: DVORANA TABOR.keras  DVORANA TABOR_train_metrics.csv  EUROPARK - POBRESKA C..keras  EUROPARK - POBRESKA C._train_metrics.csv  GORKEGA UL. - OS FRANCETA PRESERNA.keras  GORKEGA UL. - OS FRANCETA PRESERNA_train_metrics.csv  GOSPOSVETSKA C. - III. GIMNAZIJA.keras  GOSPOSVETSKA C. - III. GIMNAZIJA_train_metrics.csv  GOSPOSVETSKA C. - TURNERJEVA UL..keras  GOSPOSVETSKA C. - TURNERJEVA UL._train_metrics.csv  GOSPOSVETSKA C. - VRBANSKA C..keras  GOSPOSVETSKA C. - VRBANSKA C._train_metrics.csv  JHMB – DVOETAZNI MOST.keras  JHMB – DVOETAZNI MOST_train_metrics.csv  KOROSKA C. - KOROSKI VETER.keras  KOROSKA C. - KOROSKI VETER_train_metrics.csv  LIDL - KOROSKA C..keras  LIDL - KOROSKA C._train_metrics.csv  LIDL - TITOVA C..keras  LIDL - TITOVA C._train_metrics.csv  LJUBLJANSKA UL. - FOCHEVA.keras  LJUBLJANSKA UL. - FOCHEVA_train_metrics.csv  LJUBLJANSKA UL. - II. GIMNAZIJA.keras  LJUBLJANSKA UL. - II. GIMNAZIJA_train_metrics.csv  MLADINSKA UL. - TRUBARJEVA UL..keras  MLADINSKA UL. - TRUBARJEVA UL._train_metrics.csv  MLINSKA UL . - AVTOBUSNA POSTAJA.keras  MLINSKA UL . - AVTOBUSNA POSTAJA_train_metrics.csv  NA POLJANAH - HEROJA SERCERJA.keras  NA POLJANAH - HEROJA SERCERJA_train_metrics.csv  NICEHASH - C. PROLETARSKIH BRIGAD.keras  NICEHASH - C. PROLETARSKIH BRIGAD_train_metrics.csv  OTP BANKA - TRG LEONA STUKLJA.keras  OTP BANKA - TRG LEONA STUKLJA_train_metrics.csv  PARTIZANSKA C. - CANKARJEVA UL..keras  PARTIZANSKA C. - CANKARJEVA UL._train_metrics.csv  PARTIZANSKA C. - TIC.keras  PARTIZANSKA C. - TIC_train_metrics.csv  PARTIZANSKA C. - ZELEZNISKA POSTAJA.keras  PARTIZANSKA C. - ZELEZNISKA POSTAJA_train_metrics.csv  (+18 more)
reports/: .gitignore  current_data_validation_report.json  data_drift_report_DVORANA TABOR.html  data_drift_report_EUROPARK - POBREŠKA C..html  data_drift_report_GORKEGA UL. - OŠ FRANCETA PREŠERNA.html  data_drift_report_GOSPOSVETSKA C. - III. GIMNAZIJA.html  data_drift_report_GOSPOSVETSKA C. - TURNERJEVA UL..html  data_drift_report_GOSPOSVETSKA C. - VRBANSKA C..html  data_drift_report_HOFER - TITOVA CESTA.html  data_drift_report_JHMB – DVOETAŽNI MOST.html  index.html  (+63 more)
(+828 files in other folders)
