[tool.poetry]
name = "iis_1_2"
version = "0.1.0"
description = ""
authors = ["xopiie <nadica.uzunova1@student.um.si>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "^2.2.1"
numpy = "^1.26.4"
tensorflow = "2.15.0"
keras = "2.15.0"
tensorflow-io-gcs-filesystem="0.31.0"
scikit-learn = "^1.4.1.post1"
flask = "^3.0.2"
pytest = "^8.0.2"
flask-cors = "^4.0.0"
dvc = "^3.49.0"
dvc-s3 = "^3.1.0"

[tool.poetry.group.dev.dependencies]
black = "^21.7b0"
jupyter = "^1.1.1"

[tool.pytest.ini_options]
pythonpath = [
  ".",
  "src"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"