[tool.poetry]
name = "iis_1_2"
version = "0.1.0"
description = ""
authors = ["xopiie <nadica.uzunova1@student.um.si>"]
readme = "README.md"
packages = [{ include = "src" }] 

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "1.5.3"
scikit-learn = "^1.4.1.post1"
flask = "2.2.5"
pytest = "^8.0.2"
flask-cors = "^4.0.0"
tensorflow-io-gcs-filesystem = "^0.37.1"
dvc = "^3.58.0"
great-expectations = "^0.15.50"
evidently = "^0.5.1"
mlflow = "^2.19.0"
pygit2 = "1.16.0"
dvc-s3 = "^3.2.0"
numpy = "1.24.3"
tensorflow-macos = "2.16.2"
tensorflow-metal = "^1.2.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
jupyter = "^1.1.1"

[tool.pytest.ini_options]
pythonpath = [
  ".",
  "src"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"